# silver-pancake

./: README.md  football_match_predictor.py  pyproject.toml  requirements.txt  test_numpy.py
