[tool.poetry]
name = "foot_ball_match_predictor"
version = "0.1.0"
description = "A Streamlit app for predicting football matches"
authors = ["Your Name <your.email@example.com>"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.23.1"
scikit-learn = "1.2.2"
pandas = "2.2.0"
numpy = "1.26.4"
pickle-mixin = "1.0.2"
pickleshare = "0.7.5"
xgboost = "2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
